2015-02-23  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  integria_dbdata.sql
	  include/functions_inventories.php
	  include/ajax/inventories.php
	  include/js/integria_inventory.js
	  operation/inventories/manage_objects_type_field.php
	  operation/inventories/manage_objects_types_list.php: Allow the link 
	between external tables.

2015-02-19  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/setup/incidents_setup.php
	  godmode/setup/setup_pandora.php
	  include/functions_incidents.php
	  include/functions_inventories.php
	  include/ajax/inventories.php
	  include/ajax/remote_validations.php
	  include/js/integria.js
	  include/js/integria_incident_search.js
	  operation/incidents/incident_dashboard_detail.php
	  operation/incidents/incident_detail.php
	  operation/inventories/inventory_detail.php: Some improvements
	added.

2015-02-17  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_incidents.php: Fixed bug #1629.

2015-02-17  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_form.php
	  operation/incidents/incident_detail.php
	  operation/incidents/incident_search_logic.php: Fixed problem
	when show advanced options in ticket search.

2015-02-16  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_inventories.php: Fixed bug
	#1800.

2015-02-13  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/download/browse.php: Fixed bug
	#1793.

2015-02-13  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/js/integria_incident_search.js
	  operation/incidents/incident_detail.php: Fixed bug
	in custom fields.

2015-02-12  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/setup/incidents_setup.php
	  operation/incidents/incident_detail.php: Fixed bug
	#1707.

2015-02-12  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/contacts/contact_manage.php: Fixed bug
	updating contacts.

2015-02-12  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/contacts/contact_manage.php: Fixed bug
	#1607.

2015-02-11  Vanessa Gil <vanessa.gil@artica.es>