@@ -225,7 +225,9 @@ if (! $id && ! $create) {
 				$object['id'].'">'.$object['name'].'</a>';
 			$data[1] = substr ($object["description"], 0, 200);
 			$data[2] = objects_count_fields($object['id']);
-			$data[3] = '<a title=' . __("Fields") . ' href=index.php?sec=inventory&sec2=operation/inventories/manage_objects_types_list&id='.
+			$data[3] = '<a title=' . __("Edit external tables") . ' href=index.php?sec=inventory&sec2=operation/inventories/manage_external_tables&id='.
+				$object["id"].'><img src="images/resolution.png"></a>';
+			$data[3] .= '<a title=' . __("Fields") . ' href=index.php?sec=inventory&sec2=operation/inventories/manage_objects_types_list&id='.
 				$object["id"].'><img src="images/page_white_text.png"></a>';
 			$data[3] .= '<form style="display:inline;" method="post" onsubmit="if (!confirm(\''.__('Are you sure?').'\'))
 				return false;">';
