@@ -1,3 +1,11 @@
+2015-02-25  Vanessa Gil <vanessa.gil@artica.es>
+	
+	* include/functions_inventories.php
+	  operation/inventories/manage_objects.php: Added form for
+	editing external tables.
+
+	* operation/inventories/manage_external_tables.php: Added file.
+
 2015-02-23  Vanessa Gil <vanessa.gil@artica.es>
 	
 	* integria_db.sql
